--- a/homeassistant-config/custom_components/bermuda/translations/en.json
+++ b/homeassistant-config/custom_components/bermuda/translations/en.json
@@ -3,7 +3,7 @@
     "step": {
       "user": {
         "title": "Bermuda BLE Trilateration",
-        "description": "If you need help with the configuration have a look here: https://github.com/agittins/bermuda",
+        "description": "If you need help with the configuration have a look at our [GitHub page](https://github.com/agittins/bermuda)",
         "data": {
           "username": "Username",
           "password": "Password"
@@ -18,11 +18,18 @@
     }
   },
   "options": {
+    "error": {
+      "some_active": "You have at least some active devices, this is good.",
+      "no_scanners": "You need to configure some bluetooth scanners before Bermuda will have anything to work with. \nAny one of esphome bluetooth_proxy, Shelly bluetooth proxy or local bluetooth adaptor should get you started.",
+      "no_devices": "No bluetooth devices are actively being reported from your scanners. \nYou will need to solve this before Bermuda can be of much help."
+    },
     "step": {
       "init": {
-        "description": "Bermuda can currently see:\n- {device_count} bluetooth devices.\n- {scanner_count} bluetooth scanner devices.\n\n{status}"
+        "title": "Configure Bermuda",
+        "description": "Bermuda can currently see:\n- {device_counter_active} active out of {device_counter_devices} bluetooth devices.\n- {scanner_counter_active} active out of {scanner_counter_scanners} bluetooth scanner devices.\n\n{status}"
       },
       "globalopts": {
+        "title": "Global settings",
         "data": {
           "max_area_radius": "Max radius in metres for simple AREA detection",
           "max_velocity": "Max Velocity in metres per second - ignore readings that imply movement away faster than this limit. 3m/s (10km/h) is good.",
